# prac_gl

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Events.cpp  Events.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp
src/shaders/: triangle.frag  triangle.vert
